<resources>
    <string name="app_name">Level 4</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="career">career</string>
    <string name="name">name</string>
    <string name="user_photo">User photo</string>
    <string name="tie_username">Username</string>
    <string name="tie_email">Email</string>
    <string name="tie_career">Career</string>
    <string name="tie_phone">Phone</string>
    <string name="tie_address">Address</string>
    <string name="tie_date_of_birth">Date of birth</string>
    <string name="save">save</string>
    <string name="error_wrong_user_data">Please input all the data and choose avatar.</string>
    <string name="profile">Profile</string>
    <string name="address">address</string>
    <string name="message">message</string>
    <string name="facebook_logo">f</string>
    <string name="insta_logo">in</string>
    <string name="view_contacts">view my contacts</string>
    <string name="edit_profile">Edit profile</string>
    <string name="facebook">facebook_logo</string>
    <string name="linked_in">insta_logo</string>
    <string name="settings">Settings</string>
    <string name="greetings_message">Let\'s get acquainted!</string>
    <string name="login_tip_1">Fill out the profile and go to the application!</string>
    <string name="e_mail_with_hyphen">e-mail</string>
    <string name="password">Password</string>
    <string name="check_box_remember_me">Remember me</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="register_confirm_that">By clicking Register you agree to our Terms and Conditions</string>
    <string name="ask_user_about_acc">Already have an account?</string>
    <string name="google_button">google_button</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="this_mail_using">User with this e-mail is now registered.</string>
    <string name="btn_google_text">Google</string>
    <string name="cancel">Cancel</string>
    <string name="deletedUser">"${user.name} has deleted."</string>
    <string name="home_address">home address</string>

    <!--Not translatable-->
    <string name="argument_contacts_to_contact_profile" translatable="false">user</string>
    <string name="users" translatable="false">Users</string>
    <string name="email" translatable="false">e_mail</string>
    <string name="incorrect_password" translatable="false">Incorrect password</string>
    <string name="selection_id">selection</string>
    <string name="tag_add_contact">AddContact</string>
    <string name="my_profile">My Profile</string>
    <string name="my_contacts">My Contacts</string>
    <string name="has_been_deleted">%s has been deleted.</string>
</resources>