<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MyProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="courseImage"
    tools:context="activity.FragmentMyProfile">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <View
        android:id="@+id/v_topWindow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/settings"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="@+id/v_topWindow"
        app:layout_constraintTop_toTopOf="@+id/v_topWindow" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/f_userData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="iv_userPhoto, tv_name, tv_career, tv_userAddress"
        app:flow_verticalGap="@dimen/margin_small"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@+id/gl_guidelineCenter"
        app:layout_constraintEnd_toEndOf="@+id/v_topWindow"
        app:layout_constraintStart_toStartOf="@+id/v_topWindow"
        app:layout_constraintTop_toTopOf="@+id/v_topWindow" />

    <ImageView
        android:id="@+id/iv_userPhoto"
        android:layout_width="@dimen/user_photo_size"
        android:layout_height="@dimen/user_photo_size"
        android:backgroundTint="@drawable/btn_rect"
        android:contentDescription="@string/user_photo"
        android:foreground="@drawable/img_shaper"
        android:scaleType="centerCrop"
        android:src="@drawable/user_photo" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/large_text_size"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/career"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/mid_text_size"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_userAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/mid_text_size"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btn_viewContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_mid"
        android:layout_marginRight="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/view_contacts"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_editProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_profile_button_size"
        android:layout_marginLeft="@dimen/margin_mid"
        android:layout_marginRight="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        android:background="@color/no_color"
        android:foreground="@drawable/frame_rounding_color_primary_variant"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/mid_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_viewContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/f_linksToAnotherSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iv_facebook, iv_linkedIn"
        app:flow_horizontalGap="@dimen/margin_extra_large"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@+id/btn_editProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_guidelineCenter">
    </androidx.constraintlayout.helper.widget.Flow>

    <ImageView
        android:id="@+id/iv_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook_logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_linkedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/linkedin_logo"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>