<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContactProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="ContactProfile"
    android:transitionName="courseImage"
    tools:context="fragments.FragmentContactProfile">

    <View
        android:id="@+id/v_topWindow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/gl_guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/profile"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v_topWindow"
        app:layout_constraintTop_toTopOf="@+id/v_topWindow" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/f_userData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="vertical"
        app:constraint_referenced_ids="iv_userPhoto, tv_name, tv_career, tv_userAddress"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@+id/gl_guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Profile" />

    <ImageView
        android:id="@+id/iv_userPhoto"
        android:layout_width="@dimen/user_photo_size"
        android:layout_height="@dimen/user_photo_size"
        android:backgroundTint="@drawable/btn_rect"
        android:contentDescription="@string/user_photo"
        android:foreground="@drawable/img_shaper_color_prime"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_user_photo"
        app:layout_constraintEnd_toEndOf="@+id/v_topWindow"
        app:layout_constraintStart_toStartOf="@+id/v_topWindow"
        app:layout_constraintTop_toBottomOf="@+id/tv_Profile" />

    <ImageButton
        android:id="@+id/img_btn_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_back_arrow"
        android:layout_marginTop="@dimen/margin_back_arrow"
        android:background="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="@+id/v_topWindow"
        app:layout_constraintStart_toStartOf="@+id/v_topWindow"
        app:layout_constraintTop_toBottomOf="@id/iv_userPhoto" />

    <TextView
        android:id="@+id/tv_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/career"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="@+id/v_topWindow"
        app:layout_constraintStart_toStartOf="@+id/v_topWindow"
        app:layout_constraintTop_toTopOf="@+id/v_topWindow" />

    <TextView
        android:id="@+id/tv_userAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@+id/gl_guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v_topWindow"
        app:layout_constraintTop_toBottomOf="@id/tv_career" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/f_linksToAnotherSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iv_facebook, iv_linkedIn"
        app:flow_horizontalGap="@dimen/margin_large"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_guidelineCenter" />

    <ImageView
        android:id="@+id/iv_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook_logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_linkedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/linkedin_logo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_mid"
        android:layout_marginRight="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/message"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/mid_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>