<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ThisRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_mid"
    android:foreground="@drawable/frame_rounding"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user_photo"
        android:layout_width="@dimen/photo_size_in_recycle_view"
        android:layout_height="@dimen/photo_size_in_recycle_view"
        android:layout_marginStart="@dimen/margin_extra_small"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:foreground="@drawable/img_shaper_color_background"
        android:src="@drawable/dummy_user_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/tv_name_ts"
        app:layout_constraintBottom_toTopOf="@id/tv_career"
        app:layout_constraintStart_toEndOf="@+id/iv_user_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:text="@string/career"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/tv_career_ts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_user_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <ImageButton
        android:id="@+id/img_btn_trash_can"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_trash_can"
        android:background="@drawable/trash_can"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home_address"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/home_address"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_trash_can"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>